--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,7 @@ nav {
 }
 
 nav a {
+  color: #1A202C;
   margin-right: 10px;
   font-size: 14px;
   padding: 10px 0;
@@ -108,6 +109,7 @@ nav a {
 }
 
 nav a:hover {
+  color: #1A202C;
   border-bottom: 1px solid blue;
 }
 
