--- a/components/question.module.scss
+++ b/components/question.module.scss
@@ -1,6 +1,22 @@
 .container {
   margin-top: 10px;
 
+  .badge {
+    top: 10px;
+    right: -20px;
+    position: absolute;
+    padding: 5px 8px;
+    background: #9F7AEA;
+    color: #fff;
+    border-radius: 10px;
+    font-weight: 700;
+  }
+
+  .important {
+    position: relative;
+    border: 3px solid #9F7AEA;
+  }
+
   &.list .answers button {
     cursor: text;
   }
