--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -73,6 +73,13 @@
   }
 }
 
+.end {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 768px) {
   .main .actions .stats div span {
     display: none;
